--- a/src/includes/temp.html
+++ b/src/includes/temp.html
@@ -3,11 +3,12 @@
     <div class="container">
         <style>
             .temp {
-                gap: 15px;
                 display: flex;
+                flex-wrap: wrap;
             }
 
             .temp__link {
+                width: 50%;
                 color: inherit;
                 font-size: 16px;
                 text-decoration: underline;
@@ -19,7 +20,18 @@
         </style>
         <div class="temp">
             <a href="./index.html" class="temp__link">Главная</a>
-            <a href="./page.html" class="temp__link">Дочерняя страница</a>
+            <a href="./offers.html" class="temp__link">Перевозчикам</a>
+            <a href="./projects.html" class="temp__link">Проектные перевозки</a>
+            <a href="./job.html" class="temp__link">Работа</a>
+            <a href="./single-job.html" class="temp__link">Вакансия</a>
+            <a href="./contacts.html" class="temp__link">Контакты</a>
+            <a href="./about.html" class="temp__link">О нас</a>
+            <a href="./info.html" class="temp__link">Полезная информация</a>
+            <a href="./news.html" class="temp__link">Новости</a>
+            <a href="./single-post.html" class="temp__link">Одиночная новость</a>
+            <a href="./articles.html" class="temp__link">Статьи</a>
+            <a href="./single-article.html" class="temp__link">Одиночная статья</a>
+            <a href="./handbook.html" class="temp__link">Справочник</a>
         </div>
     </div>
 </section>
