--- a/src/styles/base/general.scss
+++ b/src/styles/base/general.scss
@@ -41,11 +41,16 @@ button {
  //    }
  //}
 
-.center {
+.text-center {
     text-align: center;
 }
 
-.centered {
+.right {
+    margin-right: 0;
+    margin-left: auto;
+}
+
+.center {
     margin-left: auto;
     margin-right: auto;
 }
