--- a/src/styles/blocks/columns.scss
+++ b/src/styles/blocks/columns.scss
@@ -1,74 +1,91 @@
 .columns {
-    gap: rem(30);
+    gap: rem(20);
     display: grid;
     grid-auto-flow: dense;
     grid-template-rows: minmax(0, 1fr);
-    grid-template-columns:  minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
     @include r(1200) {
         //gap: 0;
     }
+
+    &--center {
+        align-items: center;
+    }
+
     &__col {
         position: relative;
+
         &--1 {
             grid-column: span 1;
         }
+
         &--2 {
             grid-column: span 2;
         }
+
         &--3 {
             grid-column: span 3;
-            @include r(1200) {
-                grid-column: span 12;
-            }
+            //@include r(1200) {
+            //    grid-column: span 12;
+            //}
         }
+
         &--4 {
             grid-column: span 4;
-            @include r(1200) {
-                grid-column: span 12;
-            }
+            //@include r(1200) {
+            //    grid-column: span 12;
+            //}
         }
+
         &--5 {
             grid-column: span 5;
-            @include r(1200) {
-                grid-column: span 12;
-            }
+            //@include r(1200) {
+            //    grid-column: span 12;
+            //}
         }
+
         &--6 {
             grid-column: span 6;
-            @include r(1200) {
-                grid-column: span 12;
-            }
+            //@include r(1200) {
+            //    grid-column: span 12;
+            //}
         }
+
         &--7 {
             grid-column: span 7;
-            @include r(1200) {
-                grid-column: span 12;
-            }
+            //@include r(1200) {
+            //    grid-column: span 12;
+            //}
         }
+
         &--8 {
             grid-column: span 8;
-            @include r(1200) {
-                grid-column: span 12;
-            }
+            //@include r(1200) {
+            //    grid-column: span 12;
+            //}
         }
+
         &--9 {
             grid-column: span 9;
-            @include r(1200) {
-                grid-column: span 12;
-            }
+            //@include r(1200) {
+            //    grid-column: span 12;
+            //}
         }
+
         &--10 {
             grid-column: span 10;
-            @include r(1200) {
-                grid-column: span 12;
-            }
+            //@include r(1200) {
+            //    grid-column: span 12;
+            //}
         }
+
         &--11 {
             grid-column: span 11;
-            @include r(1200) {
-                grid-column: span 12;
-            }
+            //@include r(1200) {
+            //    grid-column: span 12;
+            //}
         }
+
         &--12 {
             grid-column: span 12;
         }
