feat: add markup

--- a/src/includes/section-partners.html
+++ b/src/includes/section-partners.html
@@ -1,12 +1,20 @@
-<section class="section pt-70 pb-70">
+<section class="section bg-gray pt-245 ptl-250 ptt-255 ptm-280 pb-40 pbt-70 pbm-50">
     <div class="container">
-        <div class="toolbar">
-            <h2 class="title">
-                Сопутствующие услуги
+        <div class="toolbar mb-30">
+            <h2 class="title ">
+                Наши партнеры
             </h2>
-            <span>
-                Стрелки
-            </span>
+        </div>
+        <div style="display: flex; gap: 16px;">
+            <a class="article-partner" href="">
+                <img alt="" src="./assets/content/logo-1.png">
+            </a>
+            <a class="article-partner" href="">
+                <img alt="" src="./assets/content/logo-2.png">
+            </a>
+            <a class="article-partner" href="">
+                <img alt="" src="./assets/content/logo-3.png">
+            </a>
         </div>
     </div>
 </section>
