--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -1,15 +1,21 @@
+@import "article-doc";
+@import "article-factoid";
+@import "article-partner";
 @import "button-head";
 @import "body";
 @import "breadcrumbs";
 @import "button";
 @import "columns";
 @import "container";
+@import "decor";
 @import "editor";
+@import "footer-info";
 @import "form";
 @import "hr";
 @import "input";
 @import "link-footer";
 @import "link-head";
+@import "links-doc";
 @import "logo";
 @import "main";
 @import "nav";
