--- a/src/styles/base/paddings.scss
+++ b/src/styles/base/paddings.scss
@@ -1,284 +1,875 @@
-.ptm {
+.pt-245 {
+    padding-top: rem(245);
+}
+
+.ptl {
     &-1 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(1);
         }
     }
     &-2 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(2);
         }
     }
     &-3 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(3);
         }
     }
     &-4 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(4);
         }
     }
     &-5 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(5);
         }
     }
     &-6 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(6);
         }
     }
     &-7 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(7);
         }
     }
     &-8 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(8);
         }
     }
     &-9 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(9);
         }
     }
     &-10 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(10);
         }
     }
     &-15 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(15);
         }
     }
     &-20 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(20);
         }
     }
     &-25 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(25);
         }
     }
     &-30 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(30);
         }
     }
     &-35 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(35);
         }
     }
     &-40 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(40);
         }
     }
     &-45 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(45);
         }
     }
     &-50 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(50);
         }
     }
     &-55 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(55);
         }
     }
     &-60 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(60);
         }
     }
     &-65 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(65);
         }
     }
     &-70 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(70);
         }
     }
     &-75 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(75);
         }
     }
     &-80 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(80);
         }
     }
     &-85 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(85);
         }
     }
     &-90 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(90);
         }
     }
     &-95 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(95);
         }
     }
     &-100 {
-        @include r(1200) {
+        @include r(1300) {
             padding-top: rem(100);
+        }
+    }
+    &-250 {
+        @include r(1300) {
+            padding-top: rem(250);
+        }
+    }
+}
+
+.pbl {
+    &-1 {
+        @include r(1300) {
+            padding-bottom: rem(1);
+        }
+    }
+    &-2 {
+        @include r(1300) {
+            padding-bottom: rem(2);
+        }
+    }
+    &-3 {
+        @include r(1300) {
+            padding-bottom: rem(3);
+        }
+    }
+    &-4 {
+        @include r(1300) {
+            padding-bottom: rem(4);
+        }
+    }
+    &-5 {
+        @include r(1300) {
+            padding-bottom: rem(5);
+        }
+    }
+    &-6 {
+        @include r(1300) {
+            padding-bottom: rem(6);
+        }
+    }
+    &-7 {
+        @include r(1300) {
+            padding-bottom: rem(7);
+        }
+    }
+    &-8 {
+        @include r(1300) {
+            padding-bottom: rem(8);
+        }
+    }
+    &-9 {
+        @include r(1300) {
+            padding-bottom: rem(9);
+        }
+    }
+    &-10 {
+        @include r(1300) {
+            padding-bottom: rem(10);
+        }
+    }
+    &-15 {
+        @include r(1300) {
+            padding-bottom: rem(15);
+        }
+    }
+    &-20 {
+        @include r(1300) {
+            padding-bottom: rem(20);
+        }
+    }
+    &-25 {
+        @include r(1300) {
+            padding-bottom: rem(25);
+        }
+    }
+    &-30 {
+        @include r(1300) {
+            padding-bottom: rem(30);
+        }
+    }
+    &-35 {
+        @include r(1300) {
+            padding-bottom: rem(35);
+        }
+    }
+    &-40 {
+        @include r(1300) {
+            padding-bottom: rem(40);
+        }
+    }
+    &-45 {
+        @include r(1300) {
+            padding-bottom: rem(45);
+        }
+    }
+    &-50 {
+        @include r(1300) {
+            padding-bottom: rem(50);
+        }
+    }
+    &-55 {
+        @include r(1300) {
+            padding-bottom: rem(55);
+        }
+    }
+    &-60 {
+        @include r(1300) {
+            padding-bottom: rem(60);
+        }
+    }
+    &-65 {
+        @include r(1300) {
+            padding-bottom: rem(65);
+        }
+    }
+    &-70 {
+        @include r(1300) {
+            padding-bottom: rem(70);
+        }
+    }
+    &-75 {
+        @include r(1300) {
+            padding-bottom: rem(75);
+        }
+    }
+    &-80 {
+        @include r(1300) {
+            padding-bottom: rem(80);
+        }
+    }
+    &-85 {
+        @include r(1300) {
+            padding-bottom: rem(85);
+        }
+    }
+    &-90 {
+        @include r(1300) {
+            padding-bottom: rem(90);
+        }
+    }
+    &-95 {
+        @include r(1300) {
+            padding-bottom: rem(95);
+        }
+    }
+    &-100 {
+        @include r(1300) {
+            padding-bottom: rem(100);
+        }
+    }
+}
+
+.ptt {
+    &-1 {
+        @include r(1000) {
+            padding-top: rem(1);
+        }
+    }
+    &-2 {
+        @include r(1000) {
+            padding-top: rem(2);
+        }
+    }
+    &-3 {
+        @include r(1000) {
+            padding-top: rem(3);
+        }
+    }
+    &-4 {
+        @include r(1000) {
+            padding-top: rem(4);
+        }
+    }
+    &-5 {
+        @include r(1000) {
+            padding-top: rem(5);
+        }
+    }
+    &-6 {
+        @include r(1000) {
+            padding-top: rem(6);
+        }
+    }
+    &-7 {
+        @include r(1000) {
+            padding-top: rem(7);
+        }
+    }
+    &-8 {
+        @include r(1000) {
+            padding-top: rem(8);
+        }
+    }
+    &-9 {
+        @include r(1000) {
+            padding-top: rem(9);
+        }
+    }
+    &-10 {
+        @include r(1000) {
+            padding-top: rem(10);
+        }
+    }
+    &-15 {
+        @include r(1000) {
+            padding-top: rem(15);
+        }
+    }
+    &-20 {
+        @include r(1000) {
+            padding-top: rem(20);
+        }
+    }
+    &-25 {
+        @include r(1000) {
+            padding-top: rem(25);
+        }
+    }
+    &-30 {
+        @include r(1000) {
+            padding-top: rem(30);
+        }
+    }
+    &-35 {
+        @include r(1000) {
+            padding-top: rem(35);
+        }
+    }
+    &-40 {
+        @include r(1000) {
+            padding-top: rem(40);
+        }
+    }
+    &-45 {
+        @include r(1000) {
+            padding-top: rem(45);
+        }
+    }
+    &-50 {
+        @include r(1000) {
+            padding-top: rem(50);
+        }
+    }
+    &-55 {
+        @include r(1000) {
+            padding-top: rem(55);
+        }
+    }
+    &-60 {
+        @include r(1000) {
+            padding-top: rem(60);
+        }
+    }
+    &-65 {
+        @include r(1000) {
+            padding-top: rem(65);
+        }
+    }
+    &-70 {
+        @include r(1000) {
+            padding-top: rem(70);
+        }
+    }
+    &-75 {
+        @include r(1000) {
+            padding-top: rem(75);
+        }
+    }
+    &-80 {
+        @include r(1000) {
+            padding-top: rem(80);
+        }
+    }
+    &-85 {
+        @include r(1000) {
+            padding-top: rem(85);
+        }
+    }
+    &-90 {
+        @include r(1000) {
+            padding-top: rem(90);
+        }
+    }
+    &-95 {
+        @include r(1000) {
+            padding-top: rem(95);
+        }
+    }
+    &-100 {
+        @include r(1000) {
+            padding-top: rem(100);
+        }
+    }
+    &-255 {
+        @include r(1000) {
+            padding-top: rem(255);
+        }
+    }
+}
+
+.pbt {
+    &-1 {
+        @include r(1000) {
+            padding-bottom: rem(1);
+        }
+    }
+    &-2 {
+        @include r(1000) {
+            padding-bottom: rem(2);
+        }
+    }
+    &-3 {
+        @include r(1000) {
+            padding-bottom: rem(3);
+        }
+    }
+    &-4 {
+        @include r(1000) {
+            padding-bottom: rem(4);
+        }
+    }
+    &-5 {
+        @include r(1000) {
+            padding-bottom: rem(5);
+        }
+    }
+    &-6 {
+        @include r(1000) {
+            padding-bottom: rem(6);
+        }
+    }
+    &-7 {
+        @include r(1000) {
+            padding-bottom: rem(7);
+        }
+    }
+    &-8 {
+        @include r(1000) {
+            padding-bottom: rem(8);
+        }
+    }
+    &-9 {
+        @include r(1000) {
+            padding-bottom: rem(9);
+        }
+    }
+    &-10 {
+        @include r(1000) {
+            padding-bottom: rem(10);
+        }
+    }
+    &-15 {
+        @include r(1000) {
+            padding-bottom: rem(15);
+        }
+    }
+    &-20 {
+        @include r(1000) {
+            padding-bottom: rem(20);
+        }
+    }
+    &-25 {
+        @include r(1000) {
+            padding-bottom: rem(25);
+        }
+    }
+    &-30 {
+        @include r(1000) {
+            padding-bottom: rem(30);
+        }
+    }
+    &-35 {
+        @include r(1000) {
+            padding-bottom: rem(35);
+        }
+    }
+    &-40 {
+        @include r(1000) {
+            padding-bottom: rem(40);
+        }
+    }
+    &-45 {
+        @include r(1000) {
+            padding-bottom: rem(45);
+        }
+    }
+    &-50 {
+        @include r(1000) {
+            padding-bottom: rem(50);
+        }
+    }
+    &-55 {
+        @include r(1000) {
+            padding-bottom: rem(55);
+        }
+    }
+    &-60 {
+        @include r(1000) {
+            padding-bottom: rem(60);
+        }
+    }
+    &-65 {
+        @include r(1000) {
+            padding-bottom: rem(65);
+        }
+    }
+    &-70 {
+        @include r(1000) {
+            padding-bottom: rem(70);
+        }
+    }
+    &-75 {
+        @include r(1000) {
+            padding-bottom: rem(75);
+        }
+    }
+    &-80 {
+        @include r(1000) {
+            padding-bottom: rem(80);
+        }
+    }
+    &-85 {
+        @include r(1000) {
+            padding-bottom: rem(85);
+        }
+    }
+    &-90 {
+        @include r(1000) {
+            padding-bottom: rem(90);
+        }
+    }
+    &-95 {
+        @include r(1000) {
+            padding-bottom: rem(95);
+        }
+    }
+    &-100 {
+        @include r(1000) {
+            padding-bottom: rem(100);
+        }
+    }
+}
+
+.ptm {
+    &-1 {
+        @include r(700) {
+            padding-top: rem(1);
+        }
+    }
+    &-2 {
+        @include r(700) {
+            padding-top: rem(2);
+        }
+    }
+    &-3 {
+        @include r(700) {
+            padding-top: rem(3);
+        }
+    }
+    &-4 {
+        @include r(700) {
+            padding-top: rem(4);
+        }
+    }
+    &-5 {
+        @include r(700) {
+            padding-top: rem(5);
+        }
+    }
+    &-6 {
+        @include r(700) {
+            padding-top: rem(6);
+        }
+    }
+    &-7 {
+        @include r(700) {
+            padding-top: rem(7);
+        }
+    }
+    &-8 {
+        @include r(700) {
+            padding-top: rem(8);
+        }
+    }
+    &-9 {
+        @include r(700) {
+            padding-top: rem(9);
+        }
+    }
+    &-10 {
+        @include r(700) {
+            padding-top: rem(10);
+        }
+    }
+    &-15 {
+        @include r(700) {
+            padding-top: rem(15);
+        }
+    }
+    &-20 {
+        @include r(700) {
+            padding-top: rem(20);
+        }
+    }
+    &-25 {
+        @include r(700) {
+            padding-top: rem(25);
+        }
+    }
+    &-30 {
+        @include r(700) {
+            padding-top: rem(30);
+        }
+    }
+    &-35 {
+        @include r(700) {
+            padding-top: rem(35);
+        }
+    }
+    &-40 {
+        @include r(700) {
+            padding-top: rem(40);
+        }
+    }
+    &-45 {
+        @include r(700) {
+            padding-top: rem(45);
+        }
+    }
+    &-50 {
+        @include r(700) {
+            padding-top: rem(50);
+        }
+    }
+    &-55 {
+        @include r(700) {
+            padding-top: rem(55);
+        }
+    }
+    &-60 {
+        @include r(700) {
+            padding-top: rem(60);
+        }
+    }
+    &-65 {
+        @include r(700) {
+            padding-top: rem(65);
+        }
+    }
+    &-70 {
+        @include r(700) {
+            padding-top: rem(70);
+        }
+    }
+    &-75 {
+        @include r(700) {
+            padding-top: rem(75);
+        }
+    }
+    &-80 {
+        @include r(700) {
+            padding-top: rem(80);
+        }
+    }
+    &-85 {
+        @include r(700) {
+            padding-top: rem(85);
+        }
+    }
+    &-90 {
+        @include r(700) {
+            padding-top: rem(90);
+        }
+    }
+    &-95 {
+        @include r(700) {
+            padding-top: rem(95);
+        }
+    }
+    &-100 {
+        @include r(700) {
+            padding-top: rem(100);
+        }
+    }
+    &-280 {
+        @include r(700) {
+            padding-top: rem(280);
         }
     }
 }
 
 .pbm {
     &-1 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(1);
         }
     }
     &-2 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(2);
         }
     }
     &-3 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(3);
         }
     }
     &-4 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(4);
         }
     }
     &-5 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(5);
         }
     }
     &-6 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(6);
         }
     }
     &-7 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(7);
         }
     }
     &-8 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(8);
         }
     }
     &-9 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(9);
         }
     }
     &-10 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(10);
         }
     }
     &-15 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(15);
         }
     }
     &-20 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(20);
         }
     }
     &-25 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(25);
         }
     }
     &-30 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(30);
         }
     }
     &-35 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(35);
         }
     }
     &-40 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(40);
         }
     }
     &-45 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(45);
         }
     }
     &-50 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(50);
         }
     }
     &-55 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(55);
         }
     }
     &-60 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(60);
         }
     }
     &-65 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(65);
         }
     }
     &-70 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(70);
         }
     }
     &-75 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(75);
         }
     }
     &-80 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(80);
         }
     }
     &-85 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(85);
         }
     }
     &-90 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(90);
         }
     }
     &-95 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(95);
         }
     }
     &-100 {
-        @include r(1200) {
+        @include r(700) {
             padding-bottom: rem(100);
         }
     }
