--- a/src/styles/blocks/columns.scss
+++ b/src/styles/blocks/columns.scss
@@ -1,15 +1,37 @@
+//desktop 12
+//laptop 12
+//tablet 6
+//mobile 2
+
 .columns {
     gap: rem(20);
     display: grid;
     grid-auto-flow: dense;
     grid-template-rows: minmax(0, 1fr);
     grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
-    @include r(1200) {
-        //gap: 0;
+
+    //@include r(1000) {
+    //    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+    //}
+
+    @include r(700) {
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
     }
 
     &--center {
         align-items: center;
+    }
+
+    &--tab-start {
+        @include r(1000) {
+            align-items: flex-start;
+        }
+    }
+
+    &--mob-gap-12 {
+        @include r(700) {
+            gap: rem(12);
+        }
     }
 
     &__col {
@@ -25,69 +47,126 @@
 
         &--3 {
             grid-column: span 3;
-            //@include r(1200) {
-            //    grid-column: span 12;
-            //}
         }
 
         &--4 {
             grid-column: span 4;
-            //@include r(1200) {
-            //    grid-column: span 12;
-            //}
         }
 
         &--5 {
             grid-column: span 5;
-            //@include r(1200) {
-            //    grid-column: span 12;
-            //}
         }
 
         &--6 {
             grid-column: span 6;
-            //@include r(1200) {
-            //    grid-column: span 12;
-            //}
         }
 
         &--7 {
             grid-column: span 7;
-            //@include r(1200) {
-            //    grid-column: span 12;
-            //}
         }
 
         &--8 {
             grid-column: span 8;
-            //@include r(1200) {
-            //    grid-column: span 12;
-            //}
         }
 
         &--9 {
             grid-column: span 9;
-            //@include r(1200) {
-            //    grid-column: span 12;
-            //}
         }
 
         &--10 {
             grid-column: span 10;
-            //@include r(1200) {
-            //    grid-column: span 12;
-            //}
         }
 
         &--11 {
             grid-column: span 11;
-            //@include r(1200) {
-            //    grid-column: span 12;
-            //}
         }
 
         &--12 {
             grid-column: span 12;
+        }
+
+        &--tab-1 {
+            @include r(1000) {
+                grid-column: span 1;
+            }
+        }
+
+        &--tab-2 {
+            @include r(1000) {
+                grid-column: span 2;
+            }
+        }
+
+        &--tab-3 {
+            @include r(1000) {
+                grid-column: span 3;
+            }
+        }
+
+        &--tab-4 {
+            @include r(1000) {
+                grid-column: span 4;
+            }
+        }
+
+        &--tab-5 {
+            @include r(1000) {
+                grid-column: span 5;
+            }
+        }
+
+        &--tab-6 {
+            @include r(1000) {
+                grid-column: span 6;
+            }
+        }
+
+        &--tab-7 {
+            @include r(1000) {
+                grid-column: span 7;
+            }
+        }
+
+        &--tab-8 {
+            @include r(1000) {
+                grid-column: span 8;
+            }
+        }
+
+        &--tab-9 {
+            @include r(1000) {
+                grid-column: span 9;
+            }
+        }
+
+        &--tab-10 {
+            @include r(1000) {
+                grid-column: span 10;
+            }
+        }
+
+        &--tab-11 {
+            @include r(1000) {
+                grid-column: span 11;
+            }
+        }
+
+        &--tab-12 {
+            @include r(1000) {
+                grid-column: span 12;
+            }
+        }
+
+        &--mob-1 {
+            @include r(700) {
+                grid-column: span 1;
+            }
+        }
+
+        &--mob-2 {
+            @include r(700) {
+                grid-column: span 2;
+            }
         }
     }
 }
