--- a/src/styles/blocks/hr.scss
+++ b/src/styles/blocks/hr.scss
@@ -1,9 +1,9 @@
 .hr {
-    margin: 0;
     padding: 0;
     width: 100%;
     height: 1px;
     border: none;
+    margin-top: 0;
     display: block;
     background-color: $blue-bg;
 }
