--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -1,3 +1,11 @@
 .section {
-    
+    border-top: 1px solid blue;
+    border-bottom: 1px solid green;
+
+    &--header {
+        top: 0;
+        left: 0;
+        right: 0;
+        position: fixed;
+    }
 }
