feat: add markup elements

--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -1,6 +1,7 @@
 @import "article-doc";
 @import "article-factoid";
 @import "article-partner";
+@import "article-review";
 @import "button-head";
 @import "body";
 @import "breadcrumbs";
