feat: add sliders

--- a/src/includes/section-partners.html
+++ b/src/includes/section-partners.html
@@ -1,20 +1,59 @@
 <section class="section bg-gray pt-245 ptl-250 ptt-255 ptm-280 pb-40 pbt-70 pbm-50">
     <div class="container">
-        <div class="toolbar mb-30">
-            <h2 class="title ">
-                Наши партнеры
-            </h2>
+        <div class="slider" data-slider="partners">
+            <div class="toolbar mb-30">
+                <h2 class="title ">
+                    Наши партнеры
+                </h2>
+                <div data-nav>
+                    <button data-button-prev>
+                        Назад
+                    </button>
+                    <button data-button-next>
+                        Вперед
+                    </button>
+                </div>
+            </div>
+            <div class="swiper-container slider__container">
+                <div class="swiper-wrapper slider__wrapper">
+                    <div class="swiper-slide slider__slide">
+                        1
+                    </div>
+                    <div class="swiper-slide slider__slide">
+                        2
+                    </div>
+                    <div class="swiper-slide slider__slide">
+                        3
+                    </div>
+                    <div class="swiper-slide slider__slide">
+                        4
+                    </div>
+                    <div class="swiper-slide slider__slide">
+                        5
+                    </div>
+                    <div class="swiper-slide slider__slide">
+                        6
+                    </div>
+                    <div class="swiper-slide slider__slide">
+                        7
+                    </div>
+                    <div class="swiper-slide slider__slide">
+                        8
+                    </div>
+                </div>
+            </div>
         </div>
-        <div style="display: flex; gap: 16px;">
-            <a class="article-partner" href="">
-                <img alt="" src="./assets/content/logo-1.png">
-            </a>
-            <a class="article-partner" href="">
-                <img alt="" src="./assets/content/logo-2.png">
-            </a>
-            <a class="article-partner" href="">
-                <img alt="" src="./assets/content/logo-3.png">
-            </a>
-        </div>
+
+<!--        <div style="display: flex; gap: 16px;">-->
+<!--            <a class="article-partner" href="">-->
+<!--                <img alt="" src="./assets/content/logo-1.png">-->
+<!--            </a>-->
+<!--            <a class="article-partner" href="">-->
+<!--                <img alt="" src="./assets/content/logo-2.png">-->
+<!--            </a>-->
+<!--            <a class="article-partner" href="">-->
+<!--                <img alt="" src="./assets/content/logo-3.png">-->
+<!--            </a>-->
+<!--        </div>-->
     </div>
 </section>
