feat: update deploy

--- a/src/includes/section-partners.html
+++ b/src/includes/section-partners.html
@@ -1,59 +1,76 @@
-<section class="section bg-gray pt-245 ptl-250 ptt-255 ptm-280 pb-40 pbt-70 pbm-50">
+<section class="section z-index-1 mb-70 mbm-50">
     <div class="container">
         <div class="slider" data-slider="partners">
             <div class="toolbar mb-30">
                 <h2 class="title ">
                     Наши партнеры
                 </h2>
-                <div data-nav>
-                    <button data-button-prev>
-                        Назад
+                <div class="nav-slider tab-hide" data-nav>
+                    <button class="nav-slider__button" data-button-prev>
+                        <svg class="nav-slider__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-left"></use>
+                        </svg>
                     </button>
-                    <button data-button-next>
-                        Вперед
+                    <button class="nav-slider__button" data-button-next>
+                        <svg class="nav-slider__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-right"></use>
+                        </svg>
                     </button>
                 </div>
             </div>
             <div class="swiper-container slider__container">
                 <div class="swiper-wrapper slider__wrapper">
                     <div class="swiper-slide slider__slide">
-                        1
+                        <a class="article-partner" href="" target="_blank" rel="nofollow">
+                            <img alt="" src="./assets/content/logo-1.png">
+                        </a>
                     </div>
                     <div class="swiper-slide slider__slide">
-                        2
+                        <a class="article-partner" href="" target="_blank" rel="nofollow">
+                            <img alt="" src="./assets/content/logo-2.png">
+                        </a>
                     </div>
                     <div class="swiper-slide slider__slide">
-                        3
+                        <a class="article-partner" href="" target="_blank" rel="nofollow">
+                            <img alt="" src="./assets/content/logo-3.png">
+                        </a>
                     </div>
                     <div class="swiper-slide slider__slide">
-                        4
+                        <a class="article-partner" href="" target="_blank" rel="nofollow">
+                            <img alt="" src="./assets/content/logo-1.png">
+                        </a>
                     </div>
                     <div class="swiper-slide slider__slide">
-                        5
+                        <a class="article-partner" href="" target="_blank" rel="nofollow">
+                            <img alt="" src="./assets/content/logo-2.png">
+                        </a>
                     </div>
                     <div class="swiper-slide slider__slide">
-                        6
+                        <a class="article-partner" href="" target="_blank" rel="nofollow">
+                            <img alt="" src="./assets/content/logo-3.png">
+                        </a>
                     </div>
                     <div class="swiper-slide slider__slide">
-                        7
+                        <a class="article-partner" href="" target="_blank" rel="nofollow">
+                            <img alt="" src="./assets/content/logo-1.png">
+                        </a>
                     </div>
                     <div class="swiper-slide slider__slide">
-                        8
+                        <a class="article-partner" href="" target="_blank" rel="nofollow">
+                            <img alt="" src="./assets/content/logo-2.png">
+                        </a>
+                    </div>
+                    <div class="swiper-slide slider__slide">
+                        <a class="article-partner" href="" target="_blank" rel="nofollow">
+                            <img alt="" src="./assets/content/logo-3.png">
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
 
-<!--        <div style="display: flex; gap: 16px;">-->
-<!--            <a class="article-partner" href="">-->
-<!--                <img alt="" src="./assets/content/logo-1.png">-->
-<!--            </a>-->
-<!--            <a class="article-partner" href="">-->
-<!--                <img alt="" src="./assets/content/logo-2.png">-->
-<!--            </a>-->
-<!--            <a class="article-partner" href="">-->
-<!--                <img alt="" src="./assets/content/logo-3.png">-->
-<!--            </a>-->
-<!--        </div>-->
+        <!--        <div style="display: flex; gap: 16px;">-->
+
+
     </div>
 </section>
