--- a/src/styles/blocks/article-partner.scss
+++ b/src/styles/blocks/article-partner.scss
@@ -1,7 +1,7 @@
 .article-partner {
+    width: 100%;
     display: flex;
     height: rem(40);
-    width: rem(164);
     padding: rem(2) rem(25);
 
     &:hover {
