--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -2,6 +2,7 @@
 @import "article-factoid";
 @import "article-partner";
 @import "article-review";
+@import "article-service";
 @import "button-head";
 @import "body";
 @import "breadcrumbs";
@@ -20,8 +21,10 @@
 @import "logo";
 @import "main";
 @import "nav";
+@import "nav-slider";
 @import "section";
 @import "shift";
+@import "slider";
 @import "socials";
 @import "title";
 @import "toolbar";
