--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -13,6 +13,22 @@
         &--service {
             height: auto;
             min-height: rem(380);
+
+            @include r(1300) {
+
+            }
+
+            @include r(1000) {
+
+            }
+
+            @include r(700) {
+
+            }
+
+            @include r(770) {
+                width: rem(335);
+            }
         }
     }
 }
